--- a/index.html
+++ b/index.html
@@ -1,10 +1,80 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Page Title</title>
+	<!-- Meta data -->
+	<meta charset="UTF-8">
+	<!-- Title -->
+	<title>Google Replica</title>
+	<!-- Browser Tab Icon -->
+	<link rel="shortcut icon" href="img/favicon.ico">
+	<!-- Font Awesome -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+	<!-- Link Custom CSS -->
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+	<!-- Top Section - Navigation -->
+	<ul class="nav">
+		<li>
+			<a href="https://www.google.com/">+Ryan</a>
+		</li>
+		<li>
+			<a href="https://accounts.google.com/signin/v2/identifier?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin">Mail</a>
+		</li>
+		<li>
+			<a href="https://www.google.com/imghp?hl=en&tab=wi">Images</a>
+		</li>
+		<li>
+			<div class="fa fa-th"></div>
+		</li>
+		<li>
+			<div class="fa fa-bell-o"></div>
+		</li>
+		<li>
+			<span class="share">Share</span>
+		</li>
+		<li>
+			<img class="profile_img" src="img/ryan.jpg" alt="profile picture">
+		</li>
+	</ul>
 
+	<!-- Middle Section - Search Box -->
+	<div class="searchBox">
+		<img src="img/google.png" alt="google image">
+		<input type="text" autofocus placeholder="Search Google or type a URL">
+		<div class="buttons">
+			<button>Google Search</button>
+			<button>I'm Feeling Lucky</button>
+		</div>
+	</div>
+	<!-- Bottom Section - Site Links -->
+	<div class="bottom">
+		<!-- Bottom Left Links -->
+		<ul class="left">
+			<li>
+				<a href="https://www.google.com/intl/en_us/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a>
+			</li>
+			<li>
+				<a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1#?modal_active=none">Business</a>
+			</li>
+			<li>
+				<a href="https://www.google.com/intl/en_us/about/?utm_source=google.com&utm_medium=referral&utm_campaign=hp-footer&fg=1">About</a>
+			</li>
+		</ul>
+
+		<!-- Bottom Right Links -->
+		<ul class="right">
+			<li>
+				<a href="https://www.google.com/intl/en_us/policies/privacy/?fg=1">Privacy</a>
+			</li>
+			<li>
+				<a href="https://www.google.com/intl/en_us/policies/terms/?fg=1">Terms</a>
+			</li>
+			<li>
+				<a href="https://www.google.com/preferences?hl=en">Settings</a>
+			</li>
+		</ul>
+	</div>
 
 </body>
 </html>
