--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<!-- Meta data -->
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Title -->
 	<title>Google Replica</title>
 	<!-- Browser Tab Icon -->
